Bug 417754 - Starts with error "The URL does not exist"
Summary: Starts with error "The URL does not exist"
Status: RESOLVED FIXED
Alias: None
Product: Smb4k
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Reinholdt
URL:
Keywords:
: 429528 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-16 18:58 UTC by postix
Modified: 2022-04-06 16:49 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2020-02-16 18:58:20 UTC
After starting smb4k queries domains and workspaces and ends with the non very helpful notification "The URL does not exist".

Without doing research, I have no idea which URL is meant.

EXPECTED RESULT
Operating System: Manjaro Linux 
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Kernel Version: 5.5.2-1-MANJARO
Comment 1 Alexander Reinholdt 2020-02-17 06:08:06 UTC
Thank you for reporting this issue. 

I noticed this error message also just recently. It is reported for example if no workgroups or domains were found. I will fix it shortly.
Comment 2 Alexander Reinholdt 2020-02-18 06:07:04 UTC
Git commit 25ef2f3579386fa25674c20bc8f63471017e5d4b by Alexander Reinholdt.
Committed on 18/02/2020 at 06:05.
Pushed by areinholdt into branch 'master'.

Stop Smb4K from reporting an error if the query for domains and workgroups fails.

M  +8    -0    core/smb4kclient_p.cpp

https://commits.kde.org/smb4k/25ef2f3579386fa25674c20bc8f63471017e5d4b
Comment 3 Alexander Reinholdt 2020-02-18 18:04:46 UTC
Git commit db68da95c2be72993fa4d591d9b5a134e2ba6f21 by Alexander Reinholdt.
Committed on 18/02/2020 at 18:04.
Pushed by areinholdt into branch 'master'.

Improve fix: Only exit silently when the query for domains and workgroups failed. So, an
error will still be reported when another URL does not exist.

M  +6    -2    core/smb4kclient_p.cpp

https://commits.kde.org/smb4k/db68da95c2be72993fa4d591d9b5a134e2ba6f21
Comment 4 Nick Cross 2020-07-06 05:52:40 UTC
@Alexander - I am still seeing this message ("The URL does not exist") upon my Fedora 32 system which uses smb4k-3.0.6-1.fc32.x86_64. From looking at https://invent.kde.org/network/smb4k/-/blob/master/ChangeLog I thought it was resolved. I think it would be useful to be able to get more logging/debugging (e.g. which URL) as I am not sure how to diagnose it further.
Comment 5 Alexander Reinholdt 2020-07-08 04:17:33 UTC
Thank you for reporting this. Indeed, this problem should be fixed. I will investigate this further. 

To be able to reproduce this, can you please tell me, if you have a firewall installed and if your computer is part of a Windows domain or workgroup?
Comment 6 Nick Cross 2020-07-08 07:52:44 UTC
Hi. I do have a firewall (as part of the default F32 install) and I am not part of any workgroup/domain. Just in case it could affect it, I do have a kerberos configuration as part of my work setup. To verify whether the firewall affects it, I did 'systemctl stop firewalld' and then restarted smb4k and I get the same error. If there is anyway of retrieving more helpful logs for you, I'd be happy to.
Comment 7 ifanzhang 2020-08-16 10:13:01 UTC
i get the same issue at Manjaro KDE v20.1 RC3
smb4k 3.0.6

i run the manjaro in a vmware on Windows 10 Host
i opened windows  sharing and the windows file wall

when i start smb4k, it prompts two message: 1. said theres samba.conf missing, 2. is the URL does not exist issue
then refresh network in the smb4k, it will say 'url does not exist issue' again
Comment 8 Alexander Reinholdt 2020-08-18 04:58:42 UTC
(In reply to Nick Cross from comment #6)
> Hi. I do have a firewall (as part of the default F32 install) and I am not
> part of any workgroup/domain. Just in case it could affect it, I do have a
> kerberos configuration as part of my work setup.

Thank you for the additional information and please excuse my late response. First I was very busy at work and later I was on vacation.

I am not quite sure if the Kerberos setup might lead to the error, because all the authentication stuff is done by libsmbclient.  

The fact that you use Kerberos indicates that you are in a Windows domain. Is that correct?
Comment 9 Alexander Reinholdt 2020-08-18 05:02:39 UTC
(In reply to ifanzhang from comment #7)
> i get the same issue at Manjaro KDE v20.1 RC3
> smb4k 3.0.6
> 
> i run the manjaro in a vmware on Windows 10 Host
> i opened windows  sharing and the windows file wall
> 
> when i start smb4k, it prompts two message: 1. said theres samba.conf
> missing, 2. is the URL does not exist issue
> then refresh network in the smb4k, it will say 'url does not exist issue'
> again

The first warning message is prompted, because Smb4K is trying to read the smb.conf file and cannot find it. I am thinking about removing that message. The second message is prompted, because something went wrong with the initial browsing. Are you in a Windows domain or do you have a workgroup setup?
Comment 10 Nick Cross 2020-08-18 07:03:21 UTC
(In reply to Alexander Reinholdt from comment #8)
> (In reply to Nick Cross from comment #6)
> > Hi. I do have a firewall (as part of the default F32 install) and I am not
> > part of any workgroup/domain. Just in case it could affect it, I do have a
> > kerberos configuration as part of my work setup.
> 
> Thank you for the additional information and please excuse my late response.
> First I was very busy at work and later I was on vacation.

No problem :-) 
 
> I am not quite sure if the Kerberos setup might lead to the error, because
> all the authentication stuff is done by libsmbclient.  
> 
> The fact that you use Kerberos indicates that you are in a Windows domain.
> Is that correct?

No, sorry I'm not. The kerberos is used as part of authentication to various (non-windows) services at my work. Template file is https://github.com/rnc/nicks-shell/blob/master/ansible-linux/templates/krb5.conf.j2
 

I think its happening on initial startup when it searches for "workgroups and domains". I can reproduce it on demand by manually running Network/"Scan Network"
Comment 11 Alexander Reinholdt 2020-09-03 10:58:37 UTC
(In reply to ifanzhang from comment #7)
> i get the same issue at Manjaro KDE v20.1 RC3
> smb4k 3.0.6
> 
> i run the manjaro in a vmware on Windows 10 Host
> i opened windows  sharing and the windows file wall
> 
> when i start smb4k, it prompts two message: 1. said theres samba.conf
> missing, 2. is the URL does not exist issue
> then refresh network in the smb4k, it will say 'url does not exist issue'
> again

I removed the function that reads the smb.conf file, so the first warning message will not appear anymore with Smb4K master.

Unfortunately, I was not able to reproduce the second problem yet. It seems that my setup is different from the one you use. Do you also use Kerberos?
Comment 12 Alexander Reinholdt 2020-11-26 13:05:14 UTC
Thank you for reporting this issue.

Have you tried the approach mentioned in the handbook under "Special Remarks": https://docs.kde.org/stable5/en/extragear-network/smb4k/special_remarks.html#special_remarks_problems_browsing_samba_47 ?

Does the scanning work when you apply the changes to the smb.conf file?
Comment 13 Nick Cross 2020-11-26 13:17:55 UTC
I have tried with

client max protocol = NT1

in the /etc/samba/smb.conf but it makes no difference. I see in the journal

Nov 26 13:13:34 atlantis smb4k[3402747]: Neither size nor group specified!
Nov 26 13:13:34 atlantis krunner[3402747]: lp_load_ex: Max protocol NT1 is less than min protocol SMB2_02.
Nov 26 13:13:34 atlantis krunner[3402747]: lp_load_ex: Max protocol NT1 is less than min protocol SMB2_02.


Note I am now running on Fedora 33 KDE Spin (fully updated) using smb4k 3.0.7
Operating System: Fedora 33
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Kernel Version: 5.9.10-200.fc33.x86_64
Comment 14 Alexander Reinholdt 2020-12-28 09:16:41 UTC
*** Bug 429528 has been marked as a duplicate of this bug. ***
Comment 15 Roger Wright 2021-06-20 16:02:55 UTC
I have this too now. Any progress? My symptoms are as above.
Comment 16 Roger Wright 2021-06-20 16:05:06 UTC
(In reply to Alexander Reinholdt from comment #12)
> Thank you for reporting this issue.
> 
> Have you tried the approach mentioned in the handbook under "Special
> Remarks":
> https://docs.kde.org/stable5/en/extragear-network/smb4k/special_remarks.
> html#special_remarks_problems_browsing_samba_47 ?
> 
> Does the scanning work when you apply the changes to the smb.conf file?

Link no longer valid.
Comment 17 postix 2021-06-20 17:12:33 UTC
It has moved:

https://docs.kde.org/stable5/en/smb4k/smb4k/special_remarks.html

however I don't see #special_remarks_problems_browsing_samba_47 there.
Comment 18 Alexander Reinholdt 2021-06-21 06:28:53 UTC
(In reply to Roger Wright from comment #15)
> I have this too now. Any progress? My symptoms are as above.

Which version of Smb4K are you using? With Smb4K 3.1.0 or 3.0.7 this should not happen no more.
Comment 19 Alexander Reinholdt 2021-06-21 06:31:17 UTC
(In reply to postix from comment #17)
> It has moved:
> 
> https://docs.kde.org/stable5/en/smb4k/smb4k/special_remarks.html
> 
> however I don't see #special_remarks_problems_browsing_samba_47 there.

The handbook was updated to version 3.1.0 recently. To view the handbook for your installed version of Smb4K, plase press the F1 key.
Comment 20 Roger Wright 2021-06-21 13:46:20 UTC
(In reply to Alexander Reinholdt from comment #18)
> (In reply to Roger Wright from comment #15)
> > I have this too now. Any progress? My symptoms are as above.
> 
> Which version of Smb4K are you using? With Smb4K 3.1.0 or 3.0.7 this should
> not happen no more.

Thanks. I'll do an upgrade and try again. Thanks for all your work :-)
Comment 21 Alexander Reinholdt 2022-04-06 16:49:40 UTC
Since this bug has already been fixed, I close this report.