Stop Smb4K from reporting an error if the query for domains and workgroups fails.

BUG: 417754